syntax = "proto3";

package internal.ping.v1test;

option go_package = "github.com/rerpc/rerpc/internal/ping/v1test;pingpb";

message PingRequest {
    int64 number = 1;
    string msg = 2;
}

message PingResponse {
    int64 number = 1;
    string msg = 2;
}

message FailRequest {
    int32 code = 1;
}

message FailResponse {
}

service PingService {
    rpc Ping(PingRequest) returns (PingResponse) {}
    rpc Fail(FailRequest) returns (FailResponse) {}
}
